--- a/sandbox.html
+++ b/sandbox.html
@@ -64,7 +64,7 @@
 	<script src="src/edit/handler/Edit.Circle.js"></script>
 	<script src="src/edit/handler/Edit.Rectangle.js"></script>
 	<script src="src/edit/handler/Edit.Marker.js"></script> 
-      
+    <script src="src/Leaflet-WFST.src.js"></script>  <!-- biblioteka odpowiedzialna za WFS-T  --> 
 <script>
     
     //rozwijane menu po kliknięciu
