--- a/sandbox.html
+++ b/sandbox.html
@@ -105,6 +105,9 @@ $(document).ready(function() {
         </div>
 
         <div class="left-sidebar">
+            <!--             nowe przyciski ostylowane w css
+ -->        <button class="button" onclick="drawPoint()">Dodaj punkt</button>
+            <button class="button" onclick="drawPolygon()">Dodaj poligon</button>
             <div class="nav">
                 <div id="layertree">
                 <ul>
@@ -141,20 +144,6 @@ var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                 attribution: 'google'
             })
 		}, {'Dodane warstwy':drawnItems}, { position: 'topright', collapsed: false }).addTo(map);
-		map.addControl(new L.Control.Draw({
-			edit: {
-				featureGroup: drawnItems,
-				poly : {
-					allowIntersection : false
-				}
-			},
-			draw: {
-				polygon : {
-					allowIntersection: false,
-					showArea:true
-				}
-			}
-		}));
 
 		map.on('draw:created', function(event) {
 			var layer = event.layer;
