--- a/sandbox.html
+++ b/sandbox.html
@@ -144,7 +144,28 @@ var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                 attribution: 'google'
             })
 		}, {'Dodane warstwy':drawnItems}, { position: 'topright', collapsed: false }).addTo(map);
-
+var wfst = new L.WFST({
+    url: 'http://150.254.124.31:8080/geoserver/ows',
+    typeNS: "topp",
+    typeName: "punkty_wgs84",
+    crs: L.CRS.EPSG4326,
+    geometryField: "the_geom",
+    style: {
+      color: 'blue',
+      weight: 2
+    }
+  }).addTo(map)
+    .once('load', function () {
+      map.fitBounds(wfst);
+    });
+//dodawaniu popupua do warstwy wfst    
+var popup = L.popup();
+  wfst.on('click', function (event) {
+    popup
+      .setLatLng(event.latlng)
+      .setContent('Pole nazwa: ' + event.layer.feature.properties.nazwa)
+      .openOn(map);
+  });
 		map.on('draw:created', function(event) {
 			var layer = event.layer;
 
