zmiana adresu geoservera

--- a/sandbox.html
+++ b/sandbox.html
@@ -145,8 +145,8 @@ var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
             })
 		}, {'Dodane warstwy':drawnItems}, { position: 'topright', collapsed: false }).addTo(map);
 var wfst = new L.WFST({
-    url: 'http://150.254.124.31:8080/geoserver/ows',
-    typeNS: "topp",
+    url: 'http://167.114.239.68:8080/geoserver/ows',
+    typeNS: "ppgis",
     typeName: "punkty_wgs84",
     crs: L.CRS.EPSG4326,
     geometryField: "the_geom",
